lana-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lana-bot-deployment
  namespace: lanabot-ns
  labels:
    app: lanabot-microservice
    env: dev
    release: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lanabot-microservice
  template:
    metadata:
      labels:
        app: lanabot-microservice
        env: dev
        release: v1.0
    spec:
      containers:
      - name: lanabot-docker-container
        image: 933060838752.dkr.ecr.eu-west-2.amazonaws.com/lana_bot_container:253_20240207_231543
        ports:
        - containerPort: 8443
        readinessProbe:
          httpGet:
            path: /
            port: 8443
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8443
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 1000m
            memory: 1000Mi
