lanayolo5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lana-yolo-deployment
  namespace: lanabot-ns
  labels:
    app: lana-yolo
    env: dev
    release: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lana-yolo
  template:
    metadata:
      labels:
        app: lana-yolo
        env: dev
        release: v1.0
    spec:
      containers:
      - name: lana-yolo-docker-container
        image: 933060838752.dkr.ecr.eu-west-2.amazonaws.com/lana_yolo5_container:48_20240206_214901
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 2000m
            memory: 2000Mi
